--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Rust
-      uses: actions/monorepo-rust@v1
+      uses: moonrepo/setup-rust@v1
       with:
         rust-version: stable
 
