--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -63,29 +63,26 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
-
-    - name: Install dependencies
-      run: npm install -g @actions/github-script@v7
-
-    - name: Create Release
+    - name: Fetch Latest Tag
       run: |
-        github.script('
-          const tag = "v1.0.0"; // Replace with your version
-          const octokit = github.getOctokit(process.env.GITHUB_TOKEN);
-          const { data: rHow to bump the release version based on olderelease } = await octokit.repos.createRelease({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            tag_name: tag,
-            name: "Release " + tag,
-            body: "Release notes for " + tag,
-            draft: false,
-            prerelease: false,
-          });
-          console.log("Created release:", release);
-        ');
+        latest_tag=$(git describe --tags --abbrev=0)
+        if [ -z "$latest_tag" ]; then
+          # If no tags exist, create an initial tag
+          git tag -a v1.0.0 -m "Initial Release"
+          git push origin v1.0.0
+          latest_tag="v1.0.0"
+        fi
+        echo "Latest Tag: $latest_tag"
+
+    - name: Bump Version
+      run: |
+        # Bump the version (adjust 'patch' to 'minor' or 'major' based on your versioning strategy)
+        new_version=$(gh release bump $latest_tag --files=~/.cargo/bin/* --title "Release $new_version" --notes "Release notes for $new_version")
+
+        # Create a new release
+        gh release create $new_version --notes "Release notes for $new_version" --title "Release $new_version" --files=target/release/*
+      
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
