--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -65,7 +65,7 @@ jobs:
 
     - name: Fetch Latest Tag
       run: |
-        latest_tag=$(git describe --tags --abbrev=0)
+        latest_tag=$(git describe --tags --abbrev=0 2>/dev/null)
         if [ -z "$latest_tag" ]; then
           # If no tags exist, create an initial tag
           git tag -a v1.0.0 -m "Initial Release"
