--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,7 +62,15 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-    
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+
+    - name: Install Dependencies
+      run: npm install semver
+      
     - name: Bump Version
       uses: actions/github-script@v7
       with:
