--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,42 +62,27 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
       with:
-        node-version: 20
+          fetch-depth: '0'
 
-    - name: Install Dependencies
-      run: npm install semver
-      
-    - name: Bump Version
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const { execSync } = require('child_process');
-          const semver = require('semver');
+    - name: Generate Git Tag
+      id: generate_tag
+      run: |
+        VERSION_PREFIX="v"
+        VERSION_MAJOR_MINOR="1.0"
+        VERSION_PATCH=$(git tag --list "${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.*" --sort=-version:refname | head -n 1 | grep -oE '[0-9]+$')
+        if [ -z "$VERSION_PATCH" ]; then
+          VERSION_PATCH=0
+        else
+          VERSION_PATCH=$((VERSION_PATCH + 1))
+        fi
+        NEW_TAG="${VERSION_PREFIX}${VERSION_MAJOR_MINOR}.${VERSION_PATCH}"
+        echo "Generated new tag: $NEW_TAG"
+        echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
 
-          try {
-            // Fetch the latest tag
-            const latestTag = execSync('git describe --tags `git rev-list --tags --max-count=1`').toString().trim();
-
-            // Bump the version (adjust 'patch' to 'minor' or 'major' based on your versioning strategy)
-            const newVersion = semver.inc(latestTag.replace('v', ''), 'patch');
-
-            // Create a new tag if it doesn't exist
-            if (!latestTag) {
-              execSync(`git tag -a v${newVersion} -m "Initial Release"`);
-              execSync(`git push origin v${newVersion}`);
-              console.log(`Created initial tag v${newVersion}`);
-            } else {
-              console.log(`Latest Tag: ${latestTag}`);
-            }
-
-            // Print the new version
-            console.log(`Bumped Version: v${newVersion}`);
-          } catch (error) {
-            core.setFailed(error.message);
-          }
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Push Git Tag
+      run: |
+        git config user.name "GitHub Actions"
+        git config user.email "github-actions@users.noreply.github.com"
+        git tag $NEW_TAG
+        git push origin $NEW_TAG
