--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,25 @@ jobs:
         channel: stable
         profile: minimal
         cache-base: main
-    
+
+    - name: Install Dependencies
+      run: cargo install ${{ matrix.package }}
+      
+    - name: Create Artifact
+      uses: actions/upload-artifact@v3
+      #with: # Alternative 1
+      #name: rust-artifacts
+      #  path: |
+      #    ~/.cargo/bin/crate_1
+      #    ~/.cargo/bin/crate_2
+      #with: # Alternative 2
+      #  name: artifacts-${{ matrix.package }}
+      #  path: |
+      #    ~/.cargo/bin/${{ matrix.package }} 
+      with: # Alternative 3
+        name: rust-artifacts
+        path: ~/.cargo/bin
+        
     - name: Use orhun/git-cliff-action
       uses: orhun/git-cliff-action@v2
 
