--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
-name: Multi-Crate Release
+# This is a basic workflow to help you get started with Actions
+
+name: CI
 
 # Controls when the workflow will run
 on:
@@ -9,25 +11,24 @@ on:
     branches: [ "main" ]
   schedule:
     - cron: '59 23 28-31 * *'  # Runs at 11:00 PM UTC on the 28th, 29th, 30th, and 31st day of each month
-  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
+
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+
     strategy:
       matrix:
-        crate_name:
-          - just
-
+        package:
+          #- icx-asset
+          - icx-cert
+          #- icx-proxy
+          
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - name: Set up Rust
       uses: moonrepo/setup-rust@v1
@@ -36,6 +37,9 @@ jobs:
         profile: minimal
         cache-base: main
 
+    - name: Install Dependencies
+      run: cargo install ${{ matrix.package }}
+      
     - name: Install Dependencies
       run: cargo install ${{ matrix.package }}
       
@@ -54,8 +58,15 @@ jobs:
         name: rust-artifacts
         path: ~/.cargo/bin
         
-    - name: Use orhun/git-cliff-action
-      uses: orhun/git-cliff-action@v2
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+      with:
+          fetch-depth: 0
 
     - name: Set up Git
       run: |
