--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,23 +89,20 @@ jobs:
       uses: orhun/git-cliff-action@v2
 
     - name: Set up Git
-      id: setup_git
       run: |
         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git config --global user.name "${GITHUB_ACTOR}"
         
     - name: Create and Push Tag
-      id: create_tag
       run: git tag -a crate-${{ matrix.crate_name }} -m "Release crate-${{ matrix.crate_name }}"
       if: github.event_name == 'push'
 
     - name: Push Tag
-      id: push_tag
       run: git push origin crate-${{ matrix.crate_name }}
       if: github.event_name == 'push'
 
     - name: Release
-    - uses: ncipollo/release-action@v1
+      uses: ncipollo/release-action@v1
       with:
         artifacts: "~/.cargo/bin/*"
         bodyFile: "RELEASE_NOTES.md"
