--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-    tags:
-      - '*'
   pull_request:
     branches: [ "main" ]
-    tags:
-      - '*'
   schedule:
     - cron: '59 23 28-31 * *'  # Runs at 11:00 PM UTC on the 28th, 29th, 30th, and 31st day of each month
 
@@ -81,6 +77,6 @@ jobs:
     - name: Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "~/.cargo/bin/*"
+        artifacts: "~/.cargo/bin/${{ matrix.crate_name }}"
         bodyFile: "RELEASE_NOTES.md"
         tag: crate-${{ matrix.crate_name }}-${{ steps.timestamp.outputs.timestamp }}
