--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,11 +66,11 @@ jobs:
         git config --global user.name "${GITHUB_ACTOR}"
       
     - name: Create and Push Tag
-      run: git tag -a crate-${{ matrix.crate_name }}-${{ env.TIMESTAMP }} -m "Release crate-${{ matrix.crate_name }}-${{ env.TIMESTAMP }}"
+      run: git tag -a crate_${{ matrix.crate_name }}_${{ env.TIMESTAMP }} -m "Release crate_${{ matrix.crate_name }}_${{ env.TIMESTAMP }}"
       if: github.event_name == 'push'
 
     - name: Push Tag
-      run: git push origin crate-${{ matrix.crate_name }}-${{ env.TIMESTAMP }}
+      run: git push origin crate_${{ matrix.crate_name }}_${{ env.TIMESTAMP }}
       if: github.event_name == 'push'
 
     - name: Release
