--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,4 +77,4 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "~/.cargo/bin/${{ matrix.crate_name }}"
-        tag: crate-${{ matrix.crate_name }}-${{ env.TIMESTAMP }}
+        tag: crate_${{ matrix.crate_name }}_${{ env.TIMESTAMP }}
