--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,23 +58,22 @@ jobs:
         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git config --global user.name "${GITHUB_ACTOR}"
       
-    # Add a condition to only execute the following steps for the last matrix job
+   # Add a condition to only execute the following steps for the last matrix job
     - name: Build and Push Combined Tag
       run: |
-          mkdir -p combined_artifacts
-          cp -r ~/.cargo/bin/icx-asset combined_artifacts/
-          cp -r ~/.cargo/bin/icx-cert combined_artifacts/
-          cp -r ~/.cargo/bin/icx-proxy combined_artifacts/
-          git add combined_artifacts
-          git commit -m "Add combined artifacts"
-          git tag -a combined_release_${{ env.TIMESTAMP }} -m "Combined release ${GITHUB_SHA}"
+        if [ "${{ matrix.crate_name }}" == "icx-proxy" ]; then
+          git tag -a crates-${{ env.TIMESTAMP }} -m "Crates release ${GITHUB_SHA}"
           git push origin combined_release_${{ env.TIMESTAMP }}
+        fi
       if: github.event_name == 'push'
 
     - name: Release
       uses: ncipollo/release-action@v1
       with:
-        artifacts: "combined_artifacts"
-        tag: combined_release_${{ env.TIMESTAMP }}
-        name: Combined Release
+        artifacts: |
+          ~/.cargo/bin/icx-asset
+          ~/.cargo/bin/icx-cert
+          ~/.cargo/bin/icx-proxy
+        tag: crates-${{ env.TIMESTAMP }}
+        name: Crates-Release
       if: github.event_name == 'push'
