--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,12 @@
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '59 23 28-31 * *'  # Runs at 11:00 PM UTC on the 28th, 29th, 30th, and 31st day of each month
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    - cron: '59 23 28-31 * *'
 
 jobs:
   release:
@@ -41,19 +36,22 @@ jobs:
         channel: stable
         profile: minimal
         cache-base: main
-        
+
     - name: Install Dependencies
       run: cargo install ${{ matrix.crate_name }}
-      
+
     - name: Create Artifact
       run: |
         mkdir -p combined_artifacts
-        cp ~/.cargo/bin/${{ matrix.crate_name }} combined_artifacts/
+        cp -rf ~/.cargo/bin/icx-asset combined_artifacts/
+        cp -rf ~/.cargo/bin/icx-cert combined_artifacts/
+        cp -rf ~/.cargo/bin/icx-proxy combined_artifacts/
+      if: matrix.crate_name == 'icx-proxy'
 
-    - name: Upload Combined Artifact
+    - name: Upload Combined Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: rust-artifact-combined-${{ env.TIMESTAMP }}
+        name: rust-artifacts-${{ env.TIMESTAMP }}
         path: combined_artifacts
 
     - name: Set up Git
@@ -63,9 +61,11 @@ jobs:
 
     - name: Create and Push Tag
       run: git tag -a combined_release_${{ env.TIMESTAMP }} -m "Combined release ${GITHUB_SHA}"
+      if: github.event_name == 'push'
 
     - name: Push Tag
       run: git push origin combined_release_${{ env.TIMESTAMP }}
+      if: github.event_name == 'push'
 
     - name: Release
       uses: ncipollo/release-action@v1
@@ -73,3 +73,4 @@ jobs:
         artifacts: combined_artifacts
         tag: combined_release_${{ env.TIMESTAMP }}
         name: Combined Release
+      if: github.event_name == 'push'
