--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,55 +26,48 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Rust
-      uses: moonrepo/setup-rust@v1
-      with:
-        channel: stable
-        profile: minimal
-        cache-base: main
-
+    - name: pre-install
+      run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential musl-tools
+          rustup target add x86_64-unknown-linux-musl
+          
     - name: Install Dependencies
-      run: cargo install ${{ matrix.crate_name }}
+      run: |
+        cargo install ${{matrix.crate_name}} --target x86_64-unknown-linux-musl
+    
+    - name: Strip Debug Symbols
+      run: strip --target ${{ matrix.target }}
+
+    - name: Copy files
+      run: |
+        mkdir -p combined_artifacts
+        cp -rfv ~/.cargo/bin/${{matrix.crate_name}} combined_artifacts/
   
   release:
     runs-on: ubuntu-latest
     needs: build
     permissions:
       contents: write
-
+  
     steps:
-    
+
     - name: Get Timestamp
       id: timestamp
       run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
       
-    - name: Create Artifact
-      run: |
-        mkdir -p combined_artifacts
-        cp -rf ~/.cargo/bin/icx-asset combined_artifacts/
-        cp -rf ~/.cargo/bin/icx-cert combined_artifacts/
-        cp -rf ~/.cargo/bin/icx-proxy combined_artifacts/
-
     - name: Upload Combined Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: rust-artifacts-${{ env.TIMESTAMP }}
-        path: combined_artifacts
+        path: combined_artifacts/*
 
-    - name: Set up Git
-      run: |
-        git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        git config --global user.name "${GITHUB_ACTOR}"
-
-    - name: Create and Push Tag
-      run: git tag -a combined_release_${{ env.TIMESTAMP }} -m "Combined release ${GITHUB_SHA}"
-
-    - name: Push Tag
-      run: git push origin combined_release_${{ env.TIMESTAMP }}
-
-    - name: Release
-      uses: ncipollo/release-action@v1
+    - name: Upload crates to release
+      uses: svenstaro/upload-release-action@v2
       with:
-        artifacts: combined_artifacts
-        tag: combined_release_${{ env.TIMESTAMP }}
-        name: Combined Release
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: combined_artifacts/*
+        asset_name: combined_release_${{ env.TIMESTAMP }}
+        tag: ${{ github.ref }}
+        overwrite: true
+
