--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Get Timestamp
+      id: timestamp
+      run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+
     - name: pre-install
       run: |
           sudo apt-get update
@@ -43,18 +47,6 @@ jobs:
       run: |
         mkdir -p combined_artifacts
         cp -rfv ~/.cargo/bin/${{matrix.crate_name}} combined_artifacts/
-  
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: write
-  
-    steps:
-
-    - name: Get Timestamp
-      id: timestamp
-      run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
       
     - name: Upload Combined Artifacts
       uses: actions/upload-artifact@v3
@@ -66,8 +58,8 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.CARGIN_TOKEN }}
-        file: ./combined_artifacts/*
+        file: ./combined_artifacts/icx-asset ./combined_artifacts/icx-cert ./combined_artifacts/icx-proxy
         asset_name: combined_release_${{ env.TIMESTAMP }}
-        tag: ${{ github.ref }}
+        tag: combined_release_${{ env.TIMESTAMP }}
         overwrite: true
 
