--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,6 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Get Timestamp
-      id: timestamp
-      run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-
     - name: pre-install
       run: |
           sudo apt-get update
@@ -46,20 +42,36 @@ jobs:
     - name: Copy files
       run: |
         mkdir -p combined_artifacts
-        cp -rfv ~/.cargo/bin/${{matrix.crate_name}} combined_artifacts/
-      
+        cp -rfv ~/.cargo/bin/${{matrix.crate_name}} combined_artifacts/*
+
     - name: Upload Combined Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: rust-artifacts-${{ env.TIMESTAMP }}
         path: combined_artifacts/*
 
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+  
+    steps:
+    - name: Download Combined Artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: rust-artifacts-${{ env.TIMESTAMP }}
+        path: combined_artifacts
+
+    - name: Get Timestamp
+      id: timestamp
+      run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+      
     - name: Upload crates to release
       uses: svenstaro/upload-release-action@v2
       with:
-        repo_token: ${{ secrets.CARGIN_TOKEN }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: ./combined_artifacts/icx-asset ./combined_artifacts/icx-cert ./combined_artifacts/icx-proxy
         asset_name: combined_release_${{ env.TIMESTAMP }}
-        tag: combined_release_${{ env.TIMESTAMP }}
+        tag: ${{ github.ref }}
         overwrite: true
-
