--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
     - name: Copy files
       run: |
         mkdir -p combined_artifacts
-        cp -rfv ~/.cargo/bin/${{matrix.crate_name}} combined_artifacts/*
+        cp -rfv ~/.cargo/bin/${{matrix.crate_name}} combined_artifacts/${{matrix.crate_name}}
 
     - name: Upload Combined Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: rust-artifacts-${{ env.TIMESTAMP }}
-        path: combined_artifacts/*
+        path: combined_artifacts/${{matrix.crate_name}}
 
   release:
     runs-on: ubuntu-latest
